--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,12 +5,18 @@
 @import url("./components/GuideFilters.css");
 @import url("./components/GuideViewer.css");
 @import url("./components/Header.css");
+@import url("./components/NavigationBar.css");
 @import url("./components/NavigationGrid.css");
 @import url("./components/Separator.css");
 @import url("./components/Text.css");
 @import url("./routes/GuideRoute.css");
+@import url("./routes/HomeRoute.css");
+@import url("./routes/MoreRoute.css");
 
 * {
+  --max-page-width: 800px;
+  --max-column-width: 512px;
+
   --spacing-1: 8px;
   --spacing-2: 12px;
   --spacing-3: 16px;
@@ -30,6 +36,8 @@
   --color-neutral-10: #111827;
 
   --color-primary-1: #0089c4;
+  --color-primary-2: #6db4d8;
+  --color-primary-3: #ace0fa;
 
   --font-heading: "Helvetica Neue", "Helvetica", sans-serif;
   --font-text: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -49,4 +57,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.hidden {
+  display: none;
 }
