--- a/static/css/components/Button.css
+++ b/static/css/components/Button.css
@@ -3,10 +3,12 @@
   padding: var(--spacing-2);
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
   width: 110px;
   transition: background-color 0.25s linear;
   transition: border-color 0.25s linear;
+  position: relative;
 }
 
 .button-no-border {
@@ -48,6 +50,10 @@ a.button:active {
   transition: border-color 0.25s linear;
 }
 
+.button-full {
+  width: 100%;
+}
+
 .button-icon {
   font-size: 1em;
   margin-right: var(--spacing-1);
@@ -58,4 +64,18 @@ a.button:active {
   font-size: 1em;
   font-family: var(--font-text);
   color: var(--color-neutral-8);
+}
+
+.button-external-icon {
+  position: absolute;
+  top: 0;
+  right: 3px;
+  color: var(--color-neutral-4);
+  transition: color 0.25s linear;
+}
+
+.button:hover .button-external-icon,
+.button:active .button-external-icon {
+  color: var(--color-neutral-8);
+  transition: color 0.25s linear;
 }
